--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
+    "dotenv": "^14.2.0",
     "ejs": "^3.1.6",
     "express": "^4.17.2"
   }
